--- a/aboutus.html
+++ b/aboutus.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <p>hello Linh</p>
     <p>hello thach</p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
